// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Рендер Один символ 1`] = `
<div
  className="className3"
>
  <style>
    .className1 {display: inline}.className2 {display: none}.className3 {display: inline}
  </style>
  <div
    className="className1"
  >
    А
  </div>
  <div
    className="className2"
  >
    Вн
  </div>
</div>
`;

exports[`Рендер Пустая строка 1`] = `
<div
  className="className1"
>
  <style>
    .className1 {display: inline}
  </style>
</div>
`;

exports[`Рендер Текст "Здесь могла быть ваша реклама" 1`] = `
<div
  className="className11"
>
  <style>
    .className1 {display: inline}.className1::after {content: "ь мoг"}.className2 {display: none}.className3 {display: inline}.className3::after {content: "ыт"}.className4 {display: none}.className5 {display: inline}.className5::after {content: " вaш"}.className6 {display: none}.className7 {display: inline}.className7::after {content: "peкл"}.className8 {display: none}.className9 {display: inline}.className10 {display: none}.className11 {display: inline}
  </style>
  <div
    className="className1"
  >
    Здec
  </div>
  <div
    className="className2"
  >
    рыР
  </div>
  <div
    className="className3"
  >
    ла б
  </div>
  <div
    className="className4"
  >
    ЪгЩ
  </div>
  <div
    className="className5"
  >
    ь
  </div>
  <div
    className="className6"
  >
    е
  </div>
  <div
    className="className7"
  >
    a 
  </div>
  <div
    className="className8"
  >
    эЬ
  </div>
  <div
    className="className9"
  >
    амa
  </div>
  <div
    className="className10"
  >
    збЛ
  </div>
</div>
`;
